[tool.poetry]
name = "repl_python3_Double-Graph-Experiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.2.0"
ipywidgets = "^7.6.5"
pandas = "^1.4.1"
plotly = "^5.6.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
